Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/WrongTarget.out
WrongTarget.java:16:1: compiler.err.annotation.type.not.applicable
1 error
